@@ -6,7 +6,6 @@
 	<title>jQuery treeView</title>
 	
 	<link rel="stylesheet" href="../jquery.treeview.css" />
-    <link rel="stylesheet" href="../red-treeview.css" />
 	<link rel="stylesheet" href="screen.css" />
 	
 	<script src="../lib/jquery.js" type="text/javascript"></script>
